--- a/Notes/Readme
+++ b/Notes/Readme
@@ -1,1 +1,3 @@
 Assorted files saved here
+PCB Spiral from: https://www.semanticscholar.org/paper/Compact-monolithic-spiral-quadrature-coupler-design-Tabarani-Schumacher/7f18878f872b617d588d85db786c9b51f7185a0d
+
