--- a/Notes/Readme
+++ b/Notes/Readme
@@ -1,3 +1,6 @@
 Assorted files saved here
 PCB Spiral from: https://www.semanticscholar.org/paper/Compact-monolithic-spiral-quadrature-coupler-design-Tabarani-Schumacher/7f18878f872b617d588d85db786c9b51f7185a0d
 
+07 Dec 2021:
+Facebook KICAD User Group member, Enrico Lia, has modelled the board using Sonnet and CST Studio.
+Results are added
